maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: not enough arguments for method aMurOuest: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
	if(x>0 && (getIndication(x-1,y)>=marquage) && !aMurOuest()){
                                                                ^JediEscaper:17: error: not enough arguments for method aMurNord: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
  if(y>0 && (getIndication(x,y-1)>=marquage) && !aMurNord()){
                                                         ^